--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -51,5 +51,8 @@ jobs:
       - name: Generate Application Key
         run: php artisan key:generate
 
+      - name: Run Database Migrations
+        run: php artisan migrate --force
+
       - name: Tests
         run: ./vendor/bin/phpunit
