--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,10 @@
+
 name: Deploy to Server
 
 on:
   push:
     branches:
-      - main 
+      - main
 
 jobs:
   deploy:
@@ -13,22 +14,33 @@ jobs:
     - name: Checkout Code
       uses: actions/checkout@v3
 
+    - name: Debug SSH Key Presence
+      run: |
+        if [ -z "${{ secrets.KOHAIISART_SSH_KEY }}" ]; then
+          echo "KOHAIISART_SSH_KEY is NOT set!"
+          exit 1
+        else
+          echo "KOHAIISART_SSH_KEY is set and available to the workflow."
+        fi
+
     - name: Set up SSH
       uses: webfactory/ssh-agent@v0.9.0
       with:
-        ssh-private-key: ${{ secrets.DEPLOY_KEY }}
+        ssh-private-key: ${{ secrets.KOHAIISART_SSH_KEY }}
+      
 
     - name: Deploy via rsync
       run: |
         rsync -avz --delete \
-          -e "ssh -o StrictHostKeyChecking=no -p ${{ secrets.DEPLOY_PORT || '22' }}" \
-          ./ ${{ secrets.DEPLOY_USER }}@${{ secrets.DEPLOY_HOST }}:/srv/kohaiis.art
+          -e "ssh -o StrictHostKeyChecking=no -p 22" \
+          ./ root@kohaiis.art:/srv/kohaiis.art
 
     - name: Run post-deploy commands
       run: |
-        ssh -o StrictHostKeyChecking=no -p ${{ secrets.DEPLOY_PORT || '22' }} ${{ secrets.DEPLOY_USER }}@${{ secrets.DEPLOY_HOST }} << 'EOF'
+        ssh -o StrictHostKeyChecking=no -p 22 root@kohaiis.art << 'EOF'
           sudo chown -R www-data:www-data /srv/kohaiis.art
           cd /srv/kohaiis.art
           php artisan migrate --force
           php artisan optimize
         EOF
+
