--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,14 +14,6 @@ jobs:
     - name: Checkout Code
       uses: actions/checkout@v3
 
-    - name: Debug SSH Key Presence
-      run: |
-        if [ -z "${{ secrets.KOHAIISART_SSH_KEY }}" ]; then
-          echo "KOHAIISART_SSH_KEY is NOT set!"
-          exit 1
-        else
-          echo "KOHAIISART_SSH_KEY is set and available to the workflow."
-        fi
 
     - name: Set up SSH
       uses: webfactory/ssh-agent@v0.9.0
@@ -31,7 +23,7 @@ jobs:
 
     - name: Deploy via rsync
       run: |
-        rsync -avz --delete \
+        rsync -avz \
           -e "ssh -o StrictHostKeyChecking=no -p 22" \
           ./ root@kohaiis.art:/srv/kohaiis.art
 
@@ -39,7 +31,6 @@ jobs:
       run: |
         ssh -o StrictHostKeyChecking=no -p 22 root@kohaiis.art << 'EOF'
           export COMPOSER_ALLOW_SUPERUSER=1
-          sudo chown -R www-data:www-data /srv/kohaiis.art
           cd /srv/kohaiis.art
           # Ensure the database directory exists
           mkdir -p database
@@ -48,4 +39,6 @@ jobs:
           composer install --no-interaction --prefer-dist --optimize-autoloader --no-dev
           php artisan migrate --force
           php artisan optimize
+          npm run build
+          sudo chown -R www-data:www-data /srv/kohaiis.art
         EOF
