--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
         "typescript-eslint": "^8.23.0"
     },
     "dependencies": {
+        "@fontsource/caveat-brush": "^5.2.6",
+        "@fontsource/montserrat": "^5.2.6",
+        "@fontsource/noto-sans-jp": "^5.2.6",
+        "@fontsource/zen-maru-gothic": "^5.2.7",
         "@headlessui/react": "^2.2.0",
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/react": "^2.0.0",
