--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "spatie/laravel-honeypot": "^4.6",
         "symfony/http-client": "^7.3",
         "symfony/mailgun-mailer": "^7.3",
         "tightenco/ziggy": "^2.4"
