--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.19.0",
+        "@prettier/plugin-php": "^0.24.0",
         "@types/node": "^22.13.5",
         "eslint": "^9.17.0",
         "eslint-config-prettier": "^10.0.1",
         "eslint-plugin-react": "^7.37.3",
         "eslint-plugin-react-hooks": "^5.1.0",
-        "prettier": "^3.4.2",
+        "prettier": "^3.6.2",
         "prettier-plugin-organize-imports": "^4.1.0",
         "prettier-plugin-tailwindcss": "^0.6.11",
         "typescript-eslint": "^8.23.0"
