--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
         "react-dom": "^19.0.0",
         "react-icons": "^5.5.0",
         "react-swipeable": "^7.0.2",
+        "sonner": "^2.0.7",
         "tailwind-merge": "^3.0.1",
         "tailwindcss": "^4.0.0",
         "tailwindcss-animate": "^1.0.7",
