feat (wip): adding images to the website

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@fontsource/noto-sans-jp": "^5.2.6",
         "@fontsource/zen-maru-gothic": "^5.2.7",
         "@headlessui/react": "^2.2.0",
+        "@hello-pangea/dnd": "^18.0.1",
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/react": "^2.1.5",
         "@radix-ui/react-avatar": "^1.1.3",
